2002-08-09	Joel Sherrill <joel@OARcorp.com>

	* shared/interrupts/isr_entries.S: Corrected typo in mips1 
	END_FRAME directive that lead to linker errors.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* clock/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* mongoosev/duart/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* mongoosev/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* mongoosev/include/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* mongoosev/vectorisrs/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* r46xx/vectorisrs/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* r46xx/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* shared/cache/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* shared/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* shared/interrupts/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* timer/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* tx39/include/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* tx39/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* tx39/vectorisrs/Makefile.am: Remove AUTOMAKE_OPTIONS.

2002-03-05	Greg Menke <gregory.menke@gsfc.nasa.gov>

	* shared/interrupts/installisrentries.c: Added support for debug
	exception vector.
	* shared/interrupts/isr_entries.S: Added support for debug exception
	vector.
	
2002-02-27	Greg Menke <gregory.menke@gsfc.nasa.gov>

	* mongoosev/include/mongoose-v.h: Added cache constants.
	* mongoosev/vectorisrs/vectorisrs.c: More tinkering to improve
	performance.

2002-02-08	Joel Sherrill <joel@OARcorp.com>

	* mongoosev/vectorisrs/vectorisrs.c: Fixed to use new frame format.

2001-02-05	Joel Sherrill <joel@OARcorp.com>

	* isr_entries.S: Removed comment incorrectly indicating this
	file was cpu_asm.S.
	* vectorexceptions.c (mips_dump_exception_frame): New routine
	broken out from default exception handler.

2001-02-01	Greg Menke <gregory.menke@gsfc.nasa.gov>

	* mongoosev/vectorisrs/vectorisrs.c,