@@ -6,7 +6,7 @@
 VPATH = @srcdir@:@srcdir@/../../../shared/src
 
 C_FILES = cache.c cache_aligned_malloc.c cache_manager.c
-C_O_FILES = $(C_FILES:%.c=$(ARCH)/%.o)
+C_O_FILES = $(C_FILES:%.c=$(ARCH)/%.$(OBJEXT))
 
 include_libcpudir = $(includedir)/libcpu
 
