@@ -1,3 +1,14 @@
+2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* clock/Makefile.am: Use .$(OBJEXT) instead of .o.
+ 	* mongoosev/duart/Makefile.am: Use .$(OBJEXT) instead of .o.
+ 	* mongoosev/vectorisrs/Makefile.am: Use .$(OBJEXT) instead of .o.
+ 	* r46xx/vectorisrs/Makefile.am: Use .$(OBJEXT) instead of .o.
+ 	* shared/cache/Makefile.am: Use .$(OBJEXT) instead of .o.
+ 	* shared/interrupts/Makefile.am: Use .$(OBJEXT) instead of .o.
+ 	* timer/Makefile.am: Use .$(OBJEXT) instead of .o.
+ 	* tx39/vectorisrs/Makefile.am: Use .$(OBJEXT) instead of .o.
+
 2002-08-09	Joel Sherrill <joel@OARcorp.com>
 
 	* shared/interrupts/isr_entries.S: Corrected typo in mips1 
